# Aurora

./: .gitignore  LICENSE  NOTICE  README.md  get_flash_attn.py  pyproject.toml  setup_env.sh  train.py
aurora/: agent.py  agent_api.py  agent_vllm.py  diffusers_pipeline.py  editor_bridge_openve.py  editor_bridge_video.py  tools.py
aurora/prompts/: type1_system.txt  type3_system.txt
diffsynth/: __init__.py  downloader.py  lora.py  model_config.py  model_manager.py  schedulers.py  vram_management.py
diffsynth/data/: __init__.py  video.py
diffsynth/models/: __init__.py  dit.py  mllm_encoder.py  vae.py
diffsynth/pipelines/: __init__.py  wan_video.py
diffsynth/trainers/: dataset.py  engine.py
diffsynth/utils/: __init__.py  mask_overlay.py  tar_shard.py
evaluation/: agentedit_bench_infer.py  agentedit_bench_score.py  editverse_gallery.py  editverse_infer.py  editverse_score.py  model_download.py  openve_infer.py  openve_prompts.json  openve_score.py  pipeline_loader.py
scripts/: ds_config.json  train_stage1.sh  train_stage2.sh
